<resources>
    <string name="app_name">Ecommerce Firebase</string>
    <string name="slogan">Find, Discover, Choose and buy anything online.</string>
    <string name="login">Login</string>
    <string name="login_desc">Already have an account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="i_m_an_admin">I\'m an Admin?</string>
    <string name="i_m_not_admin">I\'m not Admin?</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="add_new_product">Add new Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_descriptions">Product Descriptions</string>
    <string name="product_price">Product Price</string>
    <string name="add_product">Add Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="product_name1">Product Name</string>
    <string name="change_profile">Change Profile</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_price">Total Price =</string>
    <string name="next">Next</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="title_shipment_details">Please write your Shipment Details</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_home_address">Your Home Address</string>
    <string name="your_city_name">Your City Name</string>
    <string name="confirm">Confirm</string>
    <string name="cart_description">Congratulations, your final order has been placed successfully. Soon it will be verified.</string>
    <string name="check_new_order">Check New Orders</string>
    <string name="new_orders">New Orders</string>
    <string name="username">Username</string>
    <string name="total_price2">Total Price</string>
    <string name="address_city">Address, City</string>
    <string name="date_time">Date Time</string>
    <string name="show_this_order_products">Show this order products</string>
    <string name="products">Products</string>
</resources>
