<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_order_username"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_order_phone_number"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price2"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_order_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_city"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_order_dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_show_all_products"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/show_this_order_products"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>


















