<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminAddNewProductActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:id="@+id/select_product_image"
        android:src="@drawable/select_product_image"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:cropToPadding="false"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_product_name"
        android:hint="@string/product_name"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:background="@drawable/input_design"
        android:padding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_product_desc"
        android:hint="@string/product_descriptions"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:background="@drawable/input_design"
        android:padding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_product_price"
        android:hint="@string/product_price"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:background="@drawable/input_design"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_new_product"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_product"
        android:padding="17dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_design"/>

</LinearLayout>






















