<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:id="@+id/img_product_detail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_product_name"
        android:text="@string/product_name"
        android:layout_below="@+id/img_product_detail"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_product_description"
        android:text="@string/product_descriptions"
        android:layout_below="@+id/tv_product_name"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_product_price"
        android:text="@string/product_price"
        android:layout_below="@+id/tv_product_description"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_number"
        android:elevation="6dp"
        app:textSize="16sp"
        app:initialNumber="1"
        app:finalNumber="99"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_product_price"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_to_cart"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_to_cart"
        android:textColor="@android:color/white"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:textSize="18sp"/>

</RelativeLayout>