<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:id="@+id/app_logo_login"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_phone_number_input"
        android:layout_below="@+id/app_logo_login"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password_input"
        android:layout_below="@+id/et_phone_number_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/et_password_input"
        android:id="@+id/linear">

        <com.rey.material.widget.CheckBox
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/remember_me_checkbox"
            style="@style/Material.Drawable.CheckBox"
            android:text="Remember me"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            app:cbd_strokeColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginLeft="17dp"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forget_password"
            android:text="@string/forget_password"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_marginRight="17dp"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_below="@+id/linear"
        android:background="@drawable/button_design"
        android:text="@string/login"
        android:layout_margin="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:padding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_panel_link"
        android:text="@string/i_m_an_admin"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btn_login"
        android:layout_marginEnd="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/not_admin_panel_link"
        android:text="@string/i_m_not_admin"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_login"
        android:layout_marginStart="12dp"
        android:visibility="invisible"/>

</RelativeLayout>