<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/welcome">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:id="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/applogo"/>

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_slogan"
        android:text="@string/slogan"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_main_login"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_design"
        android:text="@string/login_desc"
        android:layout_margin="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_main_login"
        android:id="@+id/btn_main_register"
        android:background="@drawable/input_design"
        android:text="@string/join_now"
        android:layout_margin="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:padding="20dp"/>

</RelativeLayout>