<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="1dp"
    app:cardElevation="8dp"
    android:layout_margin="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_product_name"
            android:text="@string/product_name1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/img_product"
            android:layout_below="@+id/tv_product_name"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_product_price"
            android:layout_below="@+id/img_product"
            android:text="@string/product_price"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_product_desc"
            android:layout_below="@+id/tv_product_price"
            android:text="@string/product_descriptions"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>