<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cart_product_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_cart_product_quantity"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"/>

    </LinearLayout>


</android.support.v7.widget.CardView>