<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/appbar_settings"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/close_settings"
                    android:text="Close"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_settings"
                    android:text="Update"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="15dp"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/img_profile_settings"
        android:src="@drawable/profile"
        android:layout_below="@+id/appbar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_profile_settings"
        android:text="@string/change_profile"
        android:layout_below="@+id/img_profile_settings"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_phone_number"
        android:hint="@string/phone_number"
        android:layout_below="@+id/change_profile_settings"
        android:layout_margin="15dp"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_fullName"
        android:hint="@string/full_name"
        android:layout_below="@+id/settings_phone_number"
        android:layout_margin="15dp"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_address"
        android:hint="@string/address"
        android:layout_below="@+id/settings_fullName"
        android:layout_margin="15dp"
        android:padding="10dp"/>

</RelativeLayout>












